feat: menambahkan API category
