# internal/features/categories/routes.go
@@ -5,9 +5,9 @@ import (
 )
 
 func RegisterRoute(mux *http.ServeMux, prefix string, h *CategoryHandler) {
-	mux.HandleFunc("POST "+prefix+"categories", h.Create)
-	mux.HandleFunc("GET "+prefix+"categories", h.FindAll)
-	mux.HandleFunc("GET "+prefix+"categories/{name}", h.FindByName)
-	mux.HandleFunc("PATCH "+prefix+"categories/{id}", h.Update)
-	mux.HandleFunc("DELETE "+prefix+"categories/{id}", h.Delete)
+	mux.HandleFunc("POST "+prefix+"/categories", h.Create)
+	mux.HandleFunc("GET "+prefix+"/categories", h.FindAll)
+	mux.HandleFunc("GET "+prefix+"/categories/{name}", h.FindByName)
+	mux.HandleFunc("PATCH "+prefix+"/categories/{id}", h.Update)
+	mux.HandleFunc("DELETE "+prefix+"/categories/{name}", h.Delete)
 }
